# rust-nnet

./: Cargo.toml  LICENSE  README.md  search-index.js
nnet/: index.html  sidebar-items.js
nnet/params/: index.html  sidebar-items.js  struct.CEFunction.html  struct.DefaultErrorGradient.html  struct.DefaultWeightFunction.html  struct.LogisticNeuralNet.html  struct.MSEFunction.html  struct.NegativeOneBiasFunction.html  struct.PositiveOneBiasFunction.html  struct.RandomBiasWeightFunction.html  struct.TanhNeuralNet.html
nnet/prelude/: enum.Layer.html  enum.Node.html  index.html  sidebar-items.js  trait.ActivationFunction.html  trait.BiasWeightFunction.html  trait.ErrorFunction.html  trait.ErrorGradient.html  trait.LearningRate.html  trait.MomentumConstant.html  trait.NeuralNet.html  trait.NeuralNetParameters.html  trait.NeuralNetTrainer.html  trait.TrainerParameters.html  trait.TrainerParametersWithErrorFunction.html  trait.TrainingSetMember.html  trait.WeightFunction.html
nnet/trainer/: index.html  (+1 more)
nnet_macros/: index.html  macro.ffnn!.html  sidebar-items.js
rand/: struct.AsciiGenerator.html  struct.Generator.html
rust-nnet/: Cargo.toml
rust-nnet-macros/: Cargo.toml
rust-nnet-opencl/: Cargo.toml
rust-nnet/examples/: letter.rs  serialize.rs  xor.rs
rust-nnet/examples/data/: letter.json  xor.json
rust-nnet/src/: lib.rs  params.rs  prelude.rs  trainer.rs
rust-nnet/src/trainer/: backpropagation.rs  backpropagation_.rs  mod.rs  util.rs
src/: .lib.rs.swp  lib.rs  prelude.rs
threadpool/: index.html  struct.ScopedPool.html  struct.ThreadPool.html
(+43 files in other folders)
