[package]
name = "nnet"
version = "0.1.1"
authors = ["Ferris Tseng <ferristseng@gmail.com>"]

[lib]
name = "nnet"

[dependencies]
log = "*"
num = "*"
rand = "*"
num_cpus = "*"
rustc-serialize = "*"
scoped_threadpool = "*"

[dev-dependencies]
csv = "*"
time = "*"
nnet_macros = { path = "../rust-nnet-macros" }